gcc-9 (9-20190120-2) UNRELEASED; urgency=medium

  * Turn on ld --as-needed by default on Debian development versions.
  * Turn on profiled bootstrap on x86, AArch64, PPC64 and s390x
    architectures for native builds.

 -- Matthias Klose <doko@debian.org>  Tue, 22 Jan 2019 12:31:10 +0100

gcc-9 (9-20190120-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190120, r268102).
    - Updates to Go 1.12 beta2.
  * Build libphobos on hppa.
  * Drop libgo patch for the Hurd.
  * Refresh patches.
  * Update newlib to newlib-3.1.0.20181231.

 -- Matthias Klose <doko@debian.org>  Sun, 20 Jan 2019 11:28:26 +0100

gcc-9 (9-20190116-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190116, r267965).
  * libgccjit-9-doc: Breaks libgccjit-8-doc. Closes: #918445.
  * Update libstdc++6 symbols files.
  * Override some libasan and gccgo lintian warnings.
  * Build the Ada packages except for gnat-9-sjlj.
  * Bump standards version.

 -- Matthias Klose <doko@debian.org>  Wed, 16 Jan 2019 09:42:19 +0100

gcc-9 (9-20190103-1) experimental; urgency=medium

  * GCC snapshot, taken from the trunk (20190103).

  [ Matthias Klose ]
  * Update packaging, patches and symbols files.
  * Remove libmpx packaging, removed upstream.
  * Update newlib to the newlib-3.0.0.20180831 snapshot.
  * Disable building Ada for now.
  * Build D and libphobos from the now integrated upstream sources.
  * gcc-9-base: Break gnat (<< 7). Addresses: #911633.
  * gdc: Dynamically link the phobos library.
  * Adopt gcc-snapshot build for the current trunk.
  * Don't apply gcc-as-needed patch for snapshot builds.
  * Fix control file generation for gphobos n32 multilibs.
  * Disable gnat build on alpha. See PR ada/88200.
  * powerpcspe support removed upstream. Remove the powerpcspe packaging
    references and powerpcspe patches.
  * gcc-9-source: Depend on lsb-release.
  * Disable broken selective scheduling on ia64 (Adrian Glaubitz).