@@ -1,8 +1,12 @@
 gcc-9 (9-20190120-2) UNRELEASED; urgency=medium
 
+  [ Matthias Klose ]
   * Turn on ld --as-needed by default on Debian development versions.
   * Turn on profiled bootstrap on x86, AArch64, PPC64 and s390x
     architectures for native builds.
+
+  [ Nicolas Boulenguez ]
+  * Update the ada-kfreebsd patch. Closes: #919996.
 
  -- Matthias Klose <doko@debian.org>  Tue, 22 Jan 2019 12:31:10 +0100
 
